fixed broken css

--- a/src/style/App.sass
+++ b/src/style/App.sass
@@ -1,34 +1,5 @@
 @import "base"
 
-.container
-    display: flex
-    flex-direction: column
-    min-height: 100vh
-    
-.container-header, .container-app
-    display: flex
-    flex-wrap: wrap
-
-.box, .box-header, .box-app
-    width: 100%
-
-.svg_seal
-    width: $sealSize
-    height: $sealSize
-    path
-        fill: #303030
-        transition: fill 1.0s ease-out
-    &:hover
-        cursor: pointer
-        path
-            fill: #ffffff
-.header    
-    border-bottom: 2px solid #302b2b
-.app
-    flex: 1 0 auto
-.footer
-    flex-shrink: 0
-    border-top: 2px solid #302b2b
 
 @include respond-below(xs)
     .nav-toggle
@@ -36,7 +7,7 @@
     .header
     
     .seal
-        margin: $sealMargin
+        
     .svg_seal
         width: $sealSize - 20
         height: $sealSize - 20
@@ -45,16 +16,17 @@
     .title
         font-size: 10px
         text-align: center
-    .nav
-        height: 100%
-        width: 300px
-        position: absolute
-        transform: translate(-300px, 0)
-        transition: transform 0.3s ease
-        .visible
-            transform: translate(0, 0)
+    .container-app
+
+    .nav-off-canvas
+        
+    .nav-visible
+        
     .main
-   
+        
+    .main-visible
+          
+
     .footer
         font-size: $footerFontSize
         text-align: center
@@ -63,6 +35,10 @@
     .nav_toggle
 
     .header
+
+    .container-app
+        display: flex
+        flex-wrap: wrap
 
     .nav
 
