--- a/src/style/base.sass
+++ b/src/style/base.sass
@@ -98,15 +98,18 @@ $breakpoints: ("xs": 576px,"sm": 768px,"md": 992px,"lg": 1200px)
 $footerFontSize: 10px
 $sealSize: 100pt    
 $sealMargin: 10px
-    
-html
-    height: 100%
-    width: 100%
-body
-    height: 100%
-    width: 100% 
+$burgerButtonWidth: 40px
+$navTranslate: 300px
+
+*
     margin: 0
     padding: 0
+
+html, body
+    height: 100%
+body
+
+    height: 100vh;
     background-image: linear-gradient(260deg, #302b2b 0%, #d1d1d1   100%)
     background-repeat: no-repeat
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -116,3 +119,39 @@ body
 
 code 
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
+
+.container
+    display: flex
+    flex-direction: column
+    min-height: 100vh
+    
+.container-header
+    display: flex
+    flex-wrap: wrap
+
+.container-app
+    height: 100%
+
+.box, .box-header, .box-app
+    width: 100%
+
+.nav-toggle
+    position: absolute
+    right: 0
+.svg_seal
+    width: $sealSize
+    height: $sealSize
+    path
+        fill: #303030
+        transition: fill 1.0s ease-out
+    &:hover
+        cursor: pointer
+        path
+            fill: #ffffff
+.header    
+    border-bottom: 2px solid #302b2b
+.app
+    flex: 1 0 auto
+.footer
+    flex-shrink: 0
+    border-top: 2px solid #302b2b
